# mainflux_device_sdk_c

./: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  cmake_install.cmake  compile_commands.json
c/: Makefile  cdevice  cmake_install.cmake
src/: CMakeLists.txt  CMakeLists.txt.bak
src/c/: CMakeLists.txt  CMakeLists.txt.bak  correlation.c  correlation.h  device.c  device.h  errorlist.h  main.c  parson.c  rest.c  rest.h  senml.c  senml.h
src/cmake/: FindLibpaho-mqtt3a.cmake.bak  Findjansson.cmake  Findjansson.cmake.bak  Findpaho-mqtt3c.cmake  Findpaho-mqtt3c.cmake.bak
